--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: extra
 Maintainer: Debian multimedia packages maintainers <pkg-multimedia-maintainers@lists.alioth.debian.org>
 Uploaders: Reinhard Tartler <siretart@tauware.de>
 Build-Depends: debhelper (>= 7),
+               libavformat-dev (>= 4:0.6-1~),
                help2man,
                yasm [i386 amd64 kfreebsd-amd64 lpia],
                libgpac-dev,
