--- a/debian/rules
+++ b/debian/rules
@@ -54,7 +54,7 @@ clean:
 	$(MAKE) -o config.mak distclean
 	[ ! -f version.sh-upstream ] ||  mv version.sh-upstream version.sh
 	$(MAKE) -f debian/rules unpatch
-	dh_clean build-stamp debian/x264.1
+	dh_clean build-stamp debian/x264.1 config.mak2
 
 install:
 	dh_testdir
